Changes in openair 0.5-6 [2011-08-30]
=====================================

*	NEW FUNCTIONS importTraj, trajPlot, trajLevel for importing
	and plotting pre-defined HYSPLIT back trajectories. These
	functions are under active development and are for testing
	purposes only!
*	Fix error in % upper/lower uncertainty intervals for MannKendall
Changes in openair 0.5-4 [2011-08-04]
=====================================
*	Use roxygen2 for package documentation and future
	maintainability
*	Allow splitByDate to handle mutiple sites and output a new
	column controlled by argument 'name'
*	More options for MannKendall: control of colour and variable
	x-axis scales

Changes in openair 0.5-0 [2011-08-04]
=====================================
*	NEW FUNCTION corPlot for correlation matrices
*	add sep argument to import

Changes in openair 0.4-23 [2011-08-03]
=====================================
*	enhance 'normalise' option in timePlot
*	add annotate option to windRose/pollutionRose
*	NEW FUNCTION TaylorDiagram for model evaluation.

Changes in openair 0.4-22 [2011-06-03]
=====================================
*	NOTE - use reshape2 in place of reshape for speed and reliability
* 	allow more than one pollutant with percentileRose
* 	fixed title bug with scatterPlot - not shown for some methods
* 	modifed key handling on plots using drawOpenKey, so
  	key = NULL or FALSE now removes colour key.
* 	added method = "level" to scatterPlot for binning data with
	optional smoothing, plus other code clean-ups
* 	fix bug in conditionalQuantile that labelled plots wrongly
	when site(s) has missing data
*	added ref.x and ref.y to timePlot to allow refernce lines to
	be added
* 	do not remove calm wind speed conditions in any functions
	where this is unecessary

Changes in openair 0.4-21 [2011-06-03]
=====================================
* 	fixed bug in polarAnnulus that resulsted in a failure to
	annotate the plot properly with period = "trend" and less than 1 year