@@ -673,7 +673,6 @@ scatterPlot <- function(mydata,
                           main = quickText(main, auto.text),
                           strip = strip,
                           as.table = TRUE,
-                          main = quickText(main, auto.text),
                           xbins = 40,
                           par.strip.text = list(cex = 0.8),
                           colorkey = TRUE,
